--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#86FCA7</color>
+    <color name="purple_200">#77E395</color>
     <color name="purple_500">#00EEAB</color>
     <color name="purple_700">#00B342</color>
     <color name="teal_200">#FF03DAC5</color>
