detalle bodega y carrusel

--- a/app/src/main/res/layout/warehouse_card.xml
+++ b/app/src/main/res/layout/warehouse_card.xml
@@ -12,15 +12,14 @@
         android:layout_height="match_parent"
         android:padding="8dp">
 
-        <ImageView
-            android:id="@+id/imageView0"
+        <org.imaginativeworld.whynotimagecarousel.ImageCarousel
+            android:id="@+id/carousel_card"
             android:layout_width="0dp"
-            android:layout_height="244dp"
-            android:scaleType="centerCrop"
+            android:layout_height="300dp"
+            app:showNavigationButtons="false"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_launcher_foreground" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tv_title"
@@ -31,9 +30,9 @@
             android:text="Lorem Ipsum is simply dummy text"
             android:textSize="16sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="@+id/imageView0"
-            app:layout_constraintStart_toStartOf="@+id/imageView0"
-            app:layout_constraintTop_toBottomOf="@+id/imageView0" />
+            app:layout_constraintEnd_toEndOf="@+id/carousel_card"
+            app:layout_constraintStart_toStartOf="@+id/carousel_card"
+            app:layout_constraintTop_toBottomOf="@+id/carousel_card" />
 
 
         <TextView
