--- a/app/src/main/res/layout/warehouse_card.xml
+++ b/app/src/main/res/layout/warehouse_card.xml
@@ -55,7 +55,8 @@
             app:layout_constraintEnd_toEndOf="@+id/tv_description"
             app:layout_constraintStart_toStartOf="@+id/tv_description"
             app:layout_constraintTop_toBottomOf="@+id/tv_description"
-            tools:listitem="" />
+            tools:listitem="@layout/service_tag"
+            tools:itemCount="1"/>
 
         <TextView
             android:id="@+id/tv_price"
