--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -12,5 +12,6 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?android:attr/colorBackground</item>
         <!-- Customize your theme here. -->
+        <item name="android:fontFamily">@font/poppins</item>
     </style>
 </resources>
