--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#77E395</color>
-    <color name="purple_500">#00EEAB</color>
-    <color name="purple_700">#00B342</color>
+    <color name="purple_200">#FF8400</color>
+    <color name="purple_500">#EE8300</color>
+    <color name="purple_700">#B36B00</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
