Actualización del register

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -77,6 +77,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
+        android:onClick="guardar"
         android:text="Guardar"
         app:layout_constraintEnd_toEndOf="@+id/passwordR2"
         app:layout_constraintHorizontal_bias="0.0"
@@ -174,6 +175,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:onClick="cancelar"
         android:text="Cancelar"
         app:layout_constraintEnd_toEndOf="@+id/registerAction"
         app:layout_constraintStart_toStartOf="@+id/registerAction"
