--- a/app/src/main/res/layout/activity_warehouse_detail.xml
+++ b/app/src/main/res/layout/activity_warehouse_detail.xml
@@ -129,7 +129,7 @@
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
     <Button
-        android:id="@+id/contract"
+        android:id="@+id/checkout"
         android:layout_width="0dp"
         android:layout_height="?attr/actionBarSize"
         android:layout_marginStart="16dp"
