--- a/app/src/main/res/layout/warehouse_card.xml
+++ b/app/src/main/res/layout/warehouse_card.xml
@@ -13,7 +13,7 @@
         android:padding="8dp">
 
         <org.imaginativeworld.whynotimagecarousel.ImageCarousel
-            android:id="@+id/carousel_card"
+            android:id="@+id/carousel_warehouse"
             android:layout_width="0dp"
             android:layout_height="300dp"
             app:showNavigationButtons="false"
@@ -30,9 +30,9 @@
             android:text="Lorem Ipsum is simply dummy text"
             android:textSize="16sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="@+id/carousel_card"
-            app:layout_constraintStart_toStartOf="@+id/carousel_card"
-            app:layout_constraintTop_toBottomOf="@+id/carousel_card" />
+            app:layout_constraintEnd_toEndOf="@+id/carousel_warehouse"
+            app:layout_constraintStart_toStartOf="@+id/carousel_warehouse"
+            app:layout_constraintTop_toBottomOf="@+id/carousel_warehouse" />
 
 
         <TextView
