--- a/app/src/main/res/layout/fragment_my_warehouse.xml
+++ b/app/src/main/res/layout/fragment_my_warehouse.xml
@@ -13,37 +13,39 @@
         android:padding="8dp">
 
 
-
         <org.imaginativeworld.whynotimagecarousel.ImageCarousel
             android:id="@+id/carousel_warehouse"
-            android:layout_width="0dp"
-            android:layout_height="300dp"
-            app:showNavigationButtons="false"
+            android:layout_width="124dp"
+            android:layout_height="160dp"
+            android:layout_marginTop="16dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:showNavigationButtons="false" />
+
 
         <TextView
             android:id="@+id/tv_title"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_width="192dp"
+            android:layout_height="21dp"
+            android:layout_marginTop="24dp"
             android:maxLines="2"
             android:text="Lorem Ipsum is simply dummy text"
             android:textSize="16sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="@+id/carousel_warehouse"
-            app:layout_constraintStart_toStartOf="@+id/carousel_warehouse"
-            app:layout_constraintTop_toBottomOf="@+id/carousel_warehouse" />
-
-
-
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.921"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/tag_dispon"
             style="@style/Widget.MaterialComponents.Button.OutlinedButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="240dp"
+            android:layout_marginTop="16dp"
             android:enabled="false"
             android:text="DISPONIBLE"
             android:textSize="10sp"
@@ -55,6 +57,8 @@
             android:id="@+id/tv_billing_total"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="188dp"
+            android:layout_marginTop="24dp"
             android:text="21/03/2023 al 21/06/2023"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
