--- a/app/src/main/res/layout/fragment_warehouses.xml
+++ b/app/src/main/res/layout/fragment_warehouses.xml
@@ -20,13 +20,18 @@
     </com.google.android.material.tabs.TabLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_cards"
+        android:id="@+id/rv_bode"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/my_warehouse"
-        tools:listitem="@layout/fragment_my_warehouse" />
+        app:layout_constraintVertical_bias="0.0"
+        tools:listitem="@layout/fragment_my_warehouse"
+        />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
