--- a/app/src/main/res/layout/warehouse_card.xml
+++ b/app/src/main/res/layout/warehouse_card.xml
@@ -59,7 +59,7 @@
             tools:itemCount="1"/>
 
         <TextView
-            android:id="@+id/tv_billing_total"
+            android:id="@+id/tv_fecha"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="$4,000.00"
