--- a/app/src/main/res/layout/fragment_my_warehouse.xml
+++ b/app/src/main/res/layout/fragment_my_warehouse.xml
@@ -54,7 +54,7 @@
             app:layout_constraintTop_toBottomOf="@+id/tv_title" />
 
         <TextView
-            android:id="@+id/tv_billing_total"
+            android:id="@+id/tv_fecha"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="188dp"
